deploy/dashboard/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zplay-dashboard
  labels:
    app: zplay-dashboard
