deploy/dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zplay-dashboard
  namespace: zplay-dashboard
  labels:
    app: zplay-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`status.play.zyrak.cloud`)
      kind: Rule
      services:
        - name: zplay-dashboard
          port: 8080
  tls:
    certResolver: letsencrypt
